loopfor.LoopFor.scala.code
for (compteur <-1 to Biscuit ) {
  forward();
}
prendBiscuit();
